--- a/Inventario/Inventario.csproj
+++ b/Inventario/Inventario.csproj
@@ -134,6 +134,7 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\BusinessLogic\CompraLogic.cs" />
+    <Compile Include="Models\BusinessLogic\DetalleCompraLogic.cs" />
     <Compile Include="Models\BusinessLogic\ProductoLogic.cs" />
     <Compile Include="Models\BusinessLogic\ProveedorLogic.cs" />
     <Compile Include="Models\DB\Categorias.cs">
@@ -243,7 +244,9 @@
     <Content Include="Views\Home\Contact.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Compra\Index.cshtml" />
-    <Content Include="Views\Compra\CompraModal.cshtml" />
+    <Content Include="Views\Compra\AgregarCompraModal.cshtml" />
+    <Content Include="Views\Compra\EditarDetalle.cshtml" />
+    <Content Include="Views\Compra\EditarCompra.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
